<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/images" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/question5"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question5"
                android:hint="@string/hint"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/question1"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question1"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/ques1_var1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest1_variant1" />
                <CheckBox
                    android:id="@+id/ques1_var2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest1_variant2" />
                <CheckBox
                    android:id="@+id/ques1_var3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest1_variant3" />
                <CheckBox
                    android:id="@+id/ques1_var4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest1_variant4" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/question2"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question2"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/ques2_var1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest2_variant1" />
                <CheckBox
                    android:id="@+id/ques2_var2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest2_variant2" />
                <CheckBox
                    android:id="@+id/ques2_var3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest2_variant3" />
                <CheckBox
                    android:id="@+id/ques2_var4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/quest2_variant4" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/question3"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/ques3_var1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest3_variant1" />
                <RadioButton
                    android:id="@+id/ques3_var2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/quest3_variant2" />
                <RadioButton
                    android:id="@+id/ques3_var3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest3_variant3" />
                <RadioButton
                    android:id="@+id/ques3_var4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest3_variant4" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/question4"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question4"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/ques4_var1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest4_variant1" />
                <RadioButton
                    android:id="@+id/ques4_var2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest4_variant2" />
                <RadioButton
                    android:id="@+id/ques4_var3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest4_variant3" />
                <RadioButton
                    android:id="@+id/ques4_var4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest4_variant4" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_weight="1"
                android:text="@string/score"
                android:textColor="#00BCD4" />
            <TextView
                android:id="@+id/errors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_weight="1"
                android:text="@string/errors"
                android:textColor="#EF9A9A" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00BCD4"
                android:onClick="calculateScore"
                android:text="@string/submit" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>